Improvements code complete

--- a/app/src/components/mint/mint.scss
+++ b/app/src/components/mint/mint.scss
@@ -52,6 +52,12 @@
     .winnersView{
         font-size: smaller;
 
+        .mintedlabel{
+            text-align: right;
+            font-style: italic;
+            color: $gray-400;
+        }
+
         .winnerItem{
 
             .certHolder{
