--- a/app/src/components/mint/mint.scss
+++ b/app/src/components/mint/mint.scss
@@ -27,6 +27,17 @@
             height: 15rem;
         }
     }
+    
+    .title{
+        .info-link {
+            font-size:small;
+            color:white;
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 4px;
+        }
+    }
+
 
     .mintInfo{
         text-align: left;
