Update social bar, add prize info and link

--- a/app/src/components/mint/mint.scss
+++ b/app/src/components/mint/mint.scss
@@ -38,6 +38,11 @@
         }
     }
 
+    .prize-link a{
+        font-size:small;
+        color:white;
+    }
+
 
     .mintInfo{
         text-align: left;
