--- a/app/src/components/mint/mint.scss
+++ b/app/src/components/mint/mint.scss
@@ -75,9 +75,17 @@
         }
 
         .winnerItem{
-
+            
             .certHolder{
                 position: relative;
+
+                .bnb-amt{
+                    position: relative;
+                    top: -2px;
+                    left: 2px;
+                    width: 55px;
+                    display: inline-block;
+                }
 
                 .certback{
                     font-size: 1.5rem;
